--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videojs-resume-playback",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Resume Playback in Video.js",
   "main": "dist/videojs-resume-playback.cjs.js",
   "module": "dist/videojs-resume-playback.es.js",
@@ -32,12 +32,20 @@
     "node": ">=14",
     "npm": ">=6"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kyawswarthwin/videojs-resume-playback.git"
+  },
   "keywords": [
     "videojs",
     "videojs-plugin"
   ],
   "author": "Kyaw Swar Thwin <myanmarunicorn@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/kyawswarthwin/videojs-resume-playback/issues"
+  },
+  "homepage": "https://github.com/kyawswarthwin/videojs-resume-playback#readme",
   "vjsstandard": {
     "ignore": [
       "es",
@@ -69,7 +77,7 @@
   },
   "dependencies": {
     "global": "^4.4.0",
-    "video.js": "^8"
+    "video.js": "^7"
   },
   "devDependencies": {
     "@babel/runtime": "^7.14.0",
